fix flexbox height collapse issue

--- a/resources/assets/sass/common.sass
+++ b/resources/assets/sass/common.sass
@@ -318,6 +318,7 @@ section
     padding: grid_sz(0,1)
     text-align: center
     height: 100%
+    flex: 1
     // flex: 1
     // align-items: 'stretch'
     +flex_center
